**** Changes ****

v2.2
----
 - HttpQueryTool now interpret dots in keys as parent key and subkey pair
 - fix: cache key calculation was not always right
 - internal instance values are now stored using sql column values
   and aliases can be multiple
 - added an experimental DBResourceLoader Velocity resource loader
 - fix: aliases were not taken into account in Entity.extractColumnValues
 - fix: aliases were never read by the ConfigLoader
 - the localizer tool now checks if the locale changes in the session
 - fix: authentication filter now also remembers the query string of the saved request
 - $query now displays a nice content as a map
 - added entityref.delete(string) and entityref.delete(number) for unique primary cols
 - fix: exported keys were broken.
 - fix: do not forget query string when redirecting!
 - fix: validation: unecessary user context re-creations avoided
 - added user context getter and setter to DBReference
 - configLoader should know FATAL error level, even if very unfrequent
 - Entity.fetch(Map) now checks for key values instead of throwing an exception if they are not present
 - added the missing EntityReference.newInstance(Map) method
 - fix: some methods of UserContext had to be synchronized
 - UserContext.getValidationErrors() now clears the validation errors for the next call
 - made login and passworf form field names configurable in AuthenticationFilter
 - added the getter BaseAuthenticator.getLoggedUser()
 - fix: web.VelosurfTool now avoid overwriting a previously thread-locally initialized user context in the database
 - removed all VelosurfTool methods taking an unused UserContext argument
 - made the LocalizationFilter less verbose
 - fix: SimpleDBLocalizer no longer throws an exception when the 'localized' table is not found

v2.1 (November 2006)
------
 - fix: bug in last insert id feature (at least for hsqldb, not for mysql)
 - added some new testcases
 - fix: template name filter cache resetting produced a wrong output